--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,13 +28,13 @@
 
 				<h1 id="logo"><a href="/">
 						<strong class="small">PLS</strong>
-						<strong class="large">Programming, Logics, and Semantics</strong>
+						<strong class="large">Programming, Logics, and Systems</strong>
 						<span class="medium">Group</span>
 					</a>
 					</h1>
 				<nav id="nav">
 					<ul>
-          <li style="visibility: hidden;"><a href="/">Home</a></li>
+          <li style="width:0px; visibility: hidden;"><a href="/">Home</a></li>
 					<li class="submenu">
 						<a href="/research-areas.html">Research</a>
 							<ul>
