--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,6 +11,6 @@
 
         <header> <h2>PLS Group</h2> </header>
         <p>Theoretical foundations and tools to automatise<br> 
-        software systems creation and management.</p> 
+        software system creation and management.</p> 
     </div>
 </section>
