--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,9 @@
 
 	body, input, select, textarea {
 		color: #7c8081;
-		font-family: 'Lato', sans-serif;
-		font-size: 15pt;
-		font-weight: 300;
+		font-family: BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+		font-size: 13pt;
+		font-weight: 200;
 		letter-spacing: 0.025em;
 		line-height: 1.75em;
 	}
@@ -1100,4 +1100,10 @@
 		#sidePanel .indent-5 {
 			display: inline-block;
 			width: 5em;
+		}
+
+		.intro-box p {
+			text-align: justify;
+			font-size: 11pt; 
+			line-height: 1.45; 
 		}
