--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3725,6 +3725,20 @@ button.bg-dark:focus {
   background-color: #1d2124 !important;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.img-thumbnail {
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  max-width: 100%;
+  height: auto;
+}
+
 .bg-white {
   background-color: #fff !important;
 }
