--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
 
 /* Basic */
 
@@ -52,7 +51,7 @@
 		font-weight: 400;
 	}
 
-	p, ul, ol, dl, table, blockquote {
+	p, ul, ol, dl, blockquote {
 		margin: 0 0 2em 0;
 	}
 
@@ -93,9 +92,8 @@
 	}
 
 	hr {
-		border-top: solid 1px rgba(124, 128, 129, 0.2);
-		border: 0;
-		margin-bottom: 1.5em;
+		border-top: 1px solid #dee2e6;
+		margin: 1.5em;
 	}
 
 	blockquote {
@@ -459,7 +457,7 @@
 
 /* Table */
 
-	table {
+	/*table {
 		width: 100%;
 	}
 
@@ -484,7 +482,7 @@
 			table.default thead {
 				background: #7c8081;
 				color: #fff;
-			}
+			}*/
 
 /* Button */
 
