--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
     <article id="main">
-  <header class="special container">
+  <header class="major container">
     <h2 class="post-title">{{ page.title }}</h2>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
-  <section class="style4 wrapper container">
+  <section class="style4 card wrapper container">
     {{ content }}
   </section>
     
