added missing features

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     <script src="/js/jquery.scrolly.min.js"></script>
     <script src="/js/jquery.scrollgress.min.js"></script>
     <script src="/js/hyphenator.js"></script>
+    <script src="/js/bootstrap-toggle.min.js"></script>
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
@@ -27,6 +28,7 @@
         <link rel="stylesheet" href="/css/style-noscript.css" />
     </noscript>
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap-toggle.min.css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
     <meta name="viewport" content="width=device-width">
