--- a/_includes/header.html
+++ b/_includes/header.html
@@ -75,13 +75,7 @@
 							</ul>
 						</li>
 
-						<li class="submenu">
-            <a href="/events.html">Events</a>
-							<ul>
-								<li><a href="/events.html">Upcoming Events</a></li>
-								<li><a href="/events.html#news">News</a></li>
-							</ul>
-						</li>
+						<li><a href="/events.html">Events</a></li>
 
             <li><a href="/communities.html">Communities</a></li>
             
