switched to macro in templates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,8 +27,8 @@
 	</script>
 
 				<h1 id="logo"><a href="/">
-						<strong class="small">PLS</strong>
-						<strong class="large">Programming, Logics, and Systems</strong>
+						<strong class="small">{{ site.group_short }}</strong>
+						<strong class="large">{{ site.group_name }}</strong>
 						<span class="medium">Group</span>
 					</a>
 					</h1>
