--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -9,7 +9,7 @@
     -->
     <div class="inner">
 
-        <header> <h2>{{ group_short }} Group</h2> </header>
+        <header> <h2>{{ site.group_short }} Group</h2> </header>
         <p>Theoretical foundations and tools to automatise<br> 
         software system creation and management.</p> 
     </div>
