--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="2u -2u">
       <a class="nodec" href="https://www.sdu.dk/en">
-          <img style="width:100px;" src="images/sdu.png" alt=""></a>
+          <img style="width:100px;" src="/images/sdu.png" alt=""></a>
     </div>
     <div class="5u">
         <p><small>The Programming, Logics, and Systems Group website is supported and hosted by the <a
