--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
     <script src="/js/jquery.scrollgress.min.js"></script>
     <script src="/js/hyphenator.js"></script>
     <script src="/js/bootstrap-toggle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
