--- a/css/style.css
+++ b/css/style.css
@@ -924,7 +924,7 @@ input[type="reset"].small,
 #banner {
 				background-attachment: scroll, scroll, scroll, fixed;
 				background-color: #645862;
-				background-image: url("images/dark-bl.svg"), url("images/dark-br.svg"), url("images/overlay.png"), url("../images/banner.png");
+				background-image: url("images/dark-bl.svg"), url("images/dark-br.svg"), url("images/overlay.png"), url("../images/banner.jpg");
 				background-position: bottom left, bottom right, top left, top center;
 				background-repeat: no-repeat, no-repeat, repeat, no-repeat;
 				background-size: 25em, 25em, auto, cover;
@@ -945,7 +945,8 @@ input[type="reset"].small,
 				-o-animation-fill-mode: forwards;
 				-ms-animation-fill-mode: forwards;
 				animation-fill-mode: forwards;
-				background: rgba(52, 27, 43, 0.5);
+				background: rgba(29, 57, 64, 0.65);
+				border-radius: 5px;
 				color: white;
 				display: inline-block;
 				opacity: 0;
