--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,21 +18,22 @@
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap-toggle.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/skel.min.js"></script>
+    <!-- <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js"></script> -->
     <!-- <script src="/js/bootstrap.min.js"></script> -->
         
     <noscript>
-        <link rel="stylesheet" href="/css/skel.css" />
+        <!-- <link rel="stylesheet" href="/css/skel.css" /> -->
         <link rel="stylesheet" href="/css/style.css" />
         <link rel="stylesheet" href="/css/style-wide.css" />
         <link rel="stylesheet" href="/css/style-noscript.css" />
     </noscript>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-toggle.min.css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
+    <link rel="stylesheet" href="/css/style.css" />
     <meta name="viewport" content="width=device-width">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
