--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,104 +1,94 @@
-<header id="header">
-	<script>
-		var res = function( e ) {
-			var s = $( window ).width();
-			switch( true ){
-			case ( s < 870 ):
-				$( "#logo .small" ).show();
-				$( "#logo .medium" ).hide();
-				$( "#logo .large" ).hide();
-				break;
-			case ( s < 1200 ):
-				$( "#logo .small" ).show();
-				$( "#logo .medium" ).show();
-				$( "#logo .large" ).hide();
-				break;
-			case ( s > 1200 ):
-				$( "#logo .small" ).hide();
-				$( "#logo .medium" ).show();
-				$( "#logo .large" ).show();
-				break;
-			}
-		};
-		$( document ).ready( function() {
-			res();
-			$( window ).resize( res );
-		});
-	</script>
+<nav class="pl-3 navbar navbar-expand-md navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    <strong class="d-inline d-xl-none">{{ site.group_short }}</strong>
+    <strong class="d-none d-xl-inline">{{ site.group_name }}</strong>
+    <span class="d-none d-md-inline">Group</span>
+  </a>
 
-				<h1 id="logo"><a href="/">
-						<strong class="small">{{ site.group_short }}</strong>
-						<strong class="large">{{ site.group_name }}</strong>
-						<span class="medium">Group</span>
-					</a>
-					</h1>
-				<nav id="nav">
-					<ul>
-          <li style="width:0px; visibility: hidden;"><a href="/">Home</a></li>
-					<li class="submenu">
-						<a href="/research-areas.html">Research</a>
-							<ul>
-								<li><a href="/research-areas.html">Research areas</a></li>
-								<li><a href="/software.html">Software</a></li>
-								<li><a href="/publications.html">Publications</a></li>
-							</ul>
-						</li>
+  <button class="navbar-toggler" type="button"
+  data-toggle="collapse" data-target="#navbarSupportedContent" 
+  aria-controls="navbarSupportedContent" aria-expanded="false" 
+  aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
 
-						<li class="submenu">
-							<a href="/education.html">Education</a>
-							<ul>
-								<li><a href="/education.html#courses">Courses</a></li>
-								<li><a href="/education.html#msc_package">MSc Package</a></li>
-								<li><a href="/education.html#talent-fellowship">Talent Fellowship</a></li>
-								<li><a href="/education.html#thesis-proposals">Thesis Proposals</a></li>
-							</ul>
-						</li>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav m-auto">
 
-						<li class="submenu">
-            <a href="/industry.html">Industry</a>
-							<ul>
-								<li><a href="/industry.html#consultancy">Consultancy</a></li>
-								<li><a href="/industry.html#phd-postdoc">Industrial PhD/PostDoc</a></li>
-								<li><a href="/industry.html#talent-fellowship">Talent Fellowship</a></li>
-								<li><a href="/industry.html#innovation-projects">Innovation Projects</a></li>
-								<li><a href="/industry.html#training">Training</a></li>
-							</ul>
-						</li>
+    <li class="nav-item pl-5 my-2 my-lg-0">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="/research-areas.html"
+        id="navbarDropdown" data-toggle="dropdown" 
+        aria-haspopup="true" aria-expanded="false">
+        Research</a>
 
-            <li><a href="/grants.html">Grants</a></li>
-            
-						<li class="submenu">
-            <a href="/people.html">People</a>
-							<ul>
-								<li><a href="/people.html">Members</a></li>
-								<li><a href="/people.html#career">Open Positions</a></li>
-							</ul>
-						</li>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="/research-areas.html">Research areas</a>
+        <a class="dropdown-item" href="/software.html">Software</a>
+        <a class="dropdown-item" href="/publications.html">Publications</a>
+      </div>
+    </li>
+  </li>   
 
-						<li><a href="/events.html">Events</a></li>
+  <li class="nav-item">
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="/education.html"
+      id="navbarDropdown2" data-toggle="dropdown" 
+      aria-haspopup="true" aria-expanded="false">
+      Education
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+      <a class="dropdown-item" href="/education.html#courses">Courses</a>
+      <a class="dropdown-item" href="/education.html#msc_package">MSc Package</a>
+      <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
+      <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
+    </div>
+  </li>
+</li>
 
-            <li><a href="/communities.html">Communities</a></li>
-            
-						<!-- <li class="submenu">
-							<a href="">Layouts</a>
-							<ul>
-								<li><a href="/left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="/right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="/no-sidebar.html">No Sidebar</a></li>
-								<li><a href="/contact.html">Contact</a></li>
-								<li class="submenu">
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Dolore Sed</a></li>
-										<li><a href="#">Consequat</a></li>
-										<li><a href="#">Lorem Magna</a></li>
-										<li><a href="#">Sed Magna</a></li>
-										<li><a href="#">Ipsum Nisl</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<!-- <li><a href="#" class="button special">Sign Up</a></li> -->
-					</ul>
-				</nav>
-			</header>
+<li class="nav-item">
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="/industry.html"
+    id="navbarDropdown3" data-toggle="dropdown"
+    aria-haspopup="true" aria-expanded="false">
+    Industry
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+    <a class="dropdown-item" href="/industry.html#consultancy">Consultancy</a>
+    <a class="dropdown-item" href="/industry.html#phd-postdoc">Industrial PhD/PostDoc</a>
+    <a class="dropdown-item" href="/industry.html#talent-fellowship">Talent Fellowship</a>
+    <a class="dropdown-item" href="/industry.html#innovation-projects">Innovation Projects</a>
+    <a class="dropdown-item" href="/industry.html#training">Training</a>
+  </div>
+</li>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link" href="/grants.html">Grants</a>
+</li>
+
+<li class="nav-item">
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="/people.html"
+    id="navbarDropdown4" data-toggle="dropdown" 
+    aria-haspopup="true" aria-expanded="false">
+    People
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
+    <a class="dropdown-item" href="/people.html">Members</a>
+    <a class="dropdown-item" href="/people.html#career">Open Positions</a>
+  </div>
+</li>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link" href="/events.html">Events</a>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link" href="/communities.html">Communities</a>
+</li>
+
+</ul>
+</div>
+</nav>
