--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap-toggle.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/masonry.pkgd.min.js"></script>
     <!-- <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script> -->
