--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
     </li>
   </li>   
 
-  <li class="nav-item">
+  <!-- <li class="nav-item">
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="/education.html"
       id="navbarDropdown2" data-toggle="dropdown" 
@@ -44,7 +44,9 @@
       <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
     </div>
   </li>
-</li>
+</li> -->
+
+
 
 <li class="nav-item">
   <li class="nav-item dropdown">
