--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <script src="/js/jquery.scrolly.min.js"></script>
     <script src="/js/jquery.scrollgress.min.js"></script>
     <script src="/js/hyphenator.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <!-- <script src="/js/bootstrap.js"></script> -->
     <script src="/js/bootstrap-toggle.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/masonry.pkgd.min.js"></script>
