--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,8 +47,12 @@
 </li> -->
 
 
-
 <li class="nav-item">
+  <a class="nav-link" href="/education.html">Education</a>
+</li>
+
+
+<!-- <li class="nav-item">
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="/industry.html"
     id="navbarDropdown3" data-toggle="dropdown"
@@ -63,7 +67,7 @@
     <a class="dropdown-item" href="/industry.html#training">Training</a>
   </div>
 </li>
-</li>
+</li> -->
 
 <li class="nav-item">
   <a class="nav-link" href="/grants.html">Grants</a>
