--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,10 +7,11 @@
         automatically wrap lines, so be sure to use line breaks where
         appropriate (<br />).
     -->
-    <div class="inner">
+    <div class="inner col-9 col-md-6">
 
         <header> <h2>{{ site.group_short }} Group</h2> </header>
-        <p>Theoretical foundations and tools to automatise<br> 
-        software system creation and management.</p> 
+        <!-- <p>Theoretical foundations and tools to automatise<br> 
+        software system creation and management.</p>  -->
+        <p>{{ site.group_name }}</p>
     </div>
 </section>
