--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,9 +47,9 @@
 </li> -->
 
 
-<li class="nav-item">
+<!-- <li class="nav-item">
   <a class="nav-link" href="/education.html">Education</a>
-</li>
+</li> -->
 
 
 <!-- <li class="nav-item">
