--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,100 +1,86 @@
 <nav class="pl-3 navbar navbar-expand-md navbar-light bg-light">
-  <a class="navbar-brand" href="/">
-    <strong class="d-inline d-xl-none">{{ site.group_short }}</strong>
-    <strong class="d-none d-xl-inline">{{ site.group_name }}</strong>
-    <span class="d-none d-md-inline">Group</span>
-  </a>
-
-  <button class="navbar-toggler" type="button"
-  data-toggle="collapse" data-target="#navbarSupportedContent" 
-  aria-controls="navbarSupportedContent" aria-expanded="false" 
-  aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav m-auto">
-
-    <li class="nav-item pl-5 my-2 my-lg-0">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="/research-areas.html"
-        id="navbarDropdown" data-toggle="dropdown" 
-        aria-haspopup="true" aria-expanded="false">
-        Research</a>
-
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="/research-areas.html">Research areas</a>
-        <a class="dropdown-item" href="/software.html">Software</a>
-        <a class="dropdown-item" href="/publications.html">Publications</a>
-      </div>
-    </li>
-  </li>   
-
-  <!-- <li class="nav-item">
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="/education.html"
-      id="navbarDropdown2" data-toggle="dropdown" 
-      aria-haspopup="true" aria-expanded="false">
-      Education
-    </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-      <a class="dropdown-item" href="/education.html#courses">Courses</a>
-      <a class="dropdown-item" href="/education.html#msc_package">MSc Package</a>
-      <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
-      <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
+  <span class="navbar-brand">
+    <strong class="d-inline ">
+    <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
+    </strong>
+    <span class="d-inline "> > </span>
+      <a href="/">
+        <strong class="d-inline d-xl-none">{{ site.group_short }}</strong>
+        <strong class="d-none d-xl-inline">{{ site.group_name }}</strong>
+        <span class="d-none d-md-inline">Group</span>
+      </a>
+    </span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="ml-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item my-2 my-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="/research-areas.html" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Research</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/research-areas.html">Research areas</a>
+                            <a class="dropdown-item" href="/software.html">Software</a>
+                            <a class="dropdown-item" href="/publications.html">Publications</a>
+                        </div>
+                    </li>
+                </li>
+                <!-- <li class="nav-item">
+                <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="/education.html"
+                 id="navbarDropdown2" data-toggle="dropdown" 
+                 aria-haspopup="true" aria-expanded="false">
+                 Education
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                 <a class="dropdown-item" href="/education.html#courses">Courses</a>
+                 <a class="dropdown-item" href="/education.html#msc_package">MSc Package</a>
+                 <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
+                 <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
+                </div>
+               </li>
+              </li> -->
+                              <!-- <li class="nav-item">
+               <a class="nav-link" href="/education.html">Education</a>
+              </li> -->
+                              <!-- <li class="nav-item">
+               <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="/industry.html"
+                id="navbarDropdown3" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Industry
+               </a>
+               <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                <a class="dropdown-item" href="/industry.html#consultancy">Consultancy</a>
+                <a class="dropdown-item" href="/industry.html#phd-postdoc">Industrial PhD/PostDoc</a>
+                <a class="dropdown-item" href="/industry.html#talent-fellowship">Talent Fellowship</a>
+                <a class="dropdown-item" href="/industry.html#innovation-projects">Innovation Projects</a>
+                <a class="dropdown-item" href="/industry.html#training">Training</a>
+               </div>
+              </li>
+              </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/grants.html">Grants</a>
+                </li>
+                <li class="nav-item">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="/people.html" id="navbarDropdown4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  People
+ </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                            <a class="dropdown-item" href="/people.html">Members</a>
+                            <a class="dropdown-item" href="/people.html#career">Open Positions</a>
+                        </div>
+                    </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/events.html">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/communities.html">Communities</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </li>
-</li> -->
-
-
-<!-- <li class="nav-item">
-  <a class="nav-link" href="/education.html">Education</a>
-</li> -->
-
-
-<!-- <li class="nav-item">
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="/industry.html"
-    id="navbarDropdown3" data-toggle="dropdown"
-    aria-haspopup="true" aria-expanded="false">
-    Industry
-  </a>
-  <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
-    <a class="dropdown-item" href="/industry.html#consultancy">Consultancy</a>
-    <a class="dropdown-item" href="/industry.html#phd-postdoc">Industrial PhD/PostDoc</a>
-    <a class="dropdown-item" href="/industry.html#talent-fellowship">Talent Fellowship</a>
-    <a class="dropdown-item" href="/industry.html#innovation-projects">Innovation Projects</a>
-    <a class="dropdown-item" href="/industry.html#training">Training</a>
-  </div>
-</li>
-</li> -->
-
-<li class="nav-item">
-  <a class="nav-link" href="/grants.html">Grants</a>
-</li>
-
-<li class="nav-item">
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="/people.html"
-    id="navbarDropdown4" data-toggle="dropdown" 
-    aria-haspopup="true" aria-expanded="false">
-    People
-  </a>
-  <div class="dropdown-menu" aria-labelledby="navbarDropdown4">
-    <a class="dropdown-item" href="/people.html">Members</a>
-    <a class="dropdown-item" href="/people.html#career">Open Positions</a>
-  </div>
-</li>
-</li>
-
-<li class="nav-item">
-  <a class="nav-link" href="/events.html">Events</a>
-</li>
-
-<li class="nav-item">
-  <a class="nav-link" href="/communities.html">Communities</a>
-</li>
-
-</ul>
-</div>
 </nav>
