--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
                         </div>
                     </li>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                 <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="/education.html"
                  id="navbarDropdown2" data-toggle="dropdown" 
@@ -34,13 +34,13 @@
                  Education
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                 <a class="dropdown-item" href="/education.html#courses">Courses</a>
-                 <a class="dropdown-item" href="/education.html#msc_package">MSc Package</a>
+                 <a class="dropdown-item" href="/education.html#bachelor">Bachelor</a>
+                 <a class="dropdown-item" href="/education.html#master-courses">MSc Courses</a>
                  <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
-                 <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
+                 <a class="dropdown-item" href="/education.html#theses-opportunities">Master and PhD Thesis Proposals</a>
                 </div>
                </li>
-              </li> -->
+              </li>
                               <!-- <li class="nav-item">
                <a class="nav-link" href="/education.html">Education</a>
               </li> -->
