fixes, like it rains

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
         automatically wrap lines, so be sure to use line breaks where
         appropriate (<br />).
     -->
-    <div class="inner col-sm-12 col-md-6">
+    <div class="inner col-sm-12 col-md-6 col-lg-5">
 
         <header> <h2>{{ site.group_short }} Group</h2> </header>
         <!-- <p>Theoretical foundations and tools to automatise<br> 
