--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <article id="main">
   <header class="major container">
     <h2 class="post-title">{{ page.title }}</h2>
-    <p class="post-meta">
+    <p class="pb-4 mb-0">
 			{% if page.place %}{{ page.place }} • {% endif %}
       {% if page.date-end %} 
         {{ page.date | date: "%b %-d, %Y" }} - {{ page.date-end | date: "%b %-d, %Y" }}
