--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
-<nav class="pl-3 navbar navbar-expand-md navbar-light bg-light">
-  <span class="navbar-brand">
-    <strong class="d-inline ">
+<style>
+  .header-nav .navbar-brand a, .header-nav .nav-link{
+    color: white !important;
+  }
+</style>
+
+<nav class="header-nav pl-3 navbar navbar-static-top navbar-expand-md navbar-dark bg-dark">
+  <div class="navbar-brand">
+    <strong class="d-inline">
     <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
     </strong>
     <span class="d-inline "> > </span>
@@ -9,12 +15,13 @@
         <strong class="d-none d-xl-inline">{{ site.group_name }}</strong>
         <span class="d-none d-md-inline">Group</span>
       </a>
-    </span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    </div>
     <div class="ml-auto">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="clear-fix"></div>
+        <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item my-2 my-lg-0">
                     <li class="nav-item dropdown">
