--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+
 <!-- Footer -->
 <footer id="footer" class="bg-dark">
 
@@ -15,7 +16,10 @@
         <br>
         <a href="https://www.sdu.dk/en/om_sdu/om_dette_websted/databeskyttelse">Data protection at SDU</a> |
         <a href="https://www.sdu.dk/da/om_sdu/om_dette_websted/databeskyttelse">Databeskyttelse på SDU</a>
+        <br>
+        <a href="/humour.html">Humour</a>     
       </small>
+
       </p>
 
      </div>
