fixed educations and new post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                  <a class="dropdown-item" href="/education.html#bachelor">Bachelor</a>
                  <a class="dropdown-item" href="/education.html#master-courses">MSc Courses</a>
                  <a class="dropdown-item" href="/education.html#talent-fellowship">Talent Fellowship</a>
-                 <a class="dropdown-item" href="/education.html#theses-opportunities">Thesis Proposals</a>
+                 <a class="dropdown-item" href="/education.html#thesis-proposals">Thesis Proposals</a>
                 </div>
                </li>
               </li>
