--- a/web/_layouts/default.html
+++ b/web/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="no-sidebar">
 
     {% include header.html %}
-    <div class="page-content">
+    <div class="mt-5 pt-5 page-content">
         {{ content }}
     </div>
     {% include footer.html %}
