--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -3,8 +3,7 @@
     color: white !important;
   }
 </style>
-
-<nav class="header-nav pl-3 navbar navbar-static-top navbar-expand-md navbar-dark bg-dark">
+<nav class="header-nav pl-3 navbar fixed-top navbar-expand-md navbar-dark bg-dark">
   <div class="navbar-brand">
     <strong class="d-inline">
     <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
