--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -49,4 +49,5 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/atom+xml" title="{{ site.group_name }}" href="/feed.xml">
 </head>
