toggle static and fixed header

--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -1,9 +1,24 @@
+<script>
+var nav_toggle = function(){ 
+  $( "#navbar" ).toggleClass('fixed-top').toggleClass('static-top');
+  $( "#nav_spacer" ).toggleClass('d-none');
+};
+var nav_switch = function() {
+  var min_height = 400; // pixels
+  if ( 
+    ( $( window ).height() < min_height && $( "#navbar" ).hasClass( 'fixed-top'  ) ) ||
+    ( $( window ).height() > min_height && $( "#navbar" ).hasClass( 'static-top' ) )
+  ){ nav_toggle(); }
+};
+$( nav_switch );$( window ).resize( nav_switch );
+</script>
 <style>
   .header-nav .navbar-brand a, .header-nav .nav-link{
     color: white !important;
   }
 </style>
-<nav class="header-nav pl-3 navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+<div id="nav_spacer" class="mb-4 pb-5"></div>
+<nav id="navbar" class="header-nav pl-3 navbar fixed-top navbar-expand-md navbar-dark bg-dark">
   <div class="navbar-brand">
     <strong class="d-inline">
     <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
