--- a/web/_includes/people_externals.html
+++ b/web/_includes/people_externals.html
@@ -1,4 +1,4 @@
-<h2 id="career">External Research Collaborators</h2>
+<h2 id="career">Research Associates</h2>
 
 <div class="row">
 {% for person in site.data.people_externals %}
