Larisa's phd defence, alumni section, minor changes.

--- a/web/_includes/people_externals.html
+++ b/web/_includes/people_externals.html
@@ -1,4 +1,8 @@
-<h2 id="career">Research Associates</h2>
+{% if site.data.people_externals.size > 0 %}
+
+<hr>
+
+<h2 id="associates">Research Associates</h2>
 
 <div class="row">
 {% for person in site.data.people_externals %}
@@ -18,3 +22,4 @@
 </div>
 {% endfor %}
 </div>
+{% endif %}
