--- a/web/_includes/people_former.html
+++ b/web/_includes/people_former.html
@@ -1,11 +1,11 @@
-{% if site.data.people_visiting.size > 0 %}
+{% if site.data.people_former.size > 0 %}
 
 <hr>
 
-<h2 id="career">Visiting Members</h2>
+<h2>Former Members</h2>
 
 <div class="row">
-{% for person in site.data.people_visiting %}
+{% for person in site.data.people_former %}
 
 <div class="col-sm-12 col-lg-6">
 <div class="row">
@@ -15,7 +15,7 @@
 <div class="col-sm-7">
 <div class="row">
 <div class="col-sm-12"><strong>{{ person.name }}</strong></div>
-<div class="col-sm-12">{{ person.role }} at {{ person.affiliation }}</div>
+<div class="col-sm-12">Last position in the group {{ person.role }}</div>
 {%if person.website %}
 <div class="col-sm-6">
     <small><a class="nodec" href="{{ person.website }}"><span class="fa fa-desktop"></span> Website</a></small>
