--- a/web/_includes/people_visiting.html
+++ b/web/_includes/people_visiting.html
@@ -46,6 +46,11 @@
     <small><a class="nodec" href="https://github.com/{{ person.github }}"><span class="icon fa-github"></span> Github</a></small>
 </div>
 {% endif %}
+{%if person.twitter %}
+<div class="col-sm-6">
+    <small><a class="nodec" href="https://twitter.com/{{ person.twitter }}"><span class="icon fa-twitter"></span> Twitter</a></small>
+</div>
+{% endif %}
 </div>
 </div>
 </div>
