capitalise all first

--- a/web/_includes/people_members.html
+++ b/web/_includes/people_members.html
@@ -76,7 +76,7 @@
 <div style="margin-top:-1em; margin-bottom:2em;" class="col-sm-12">
   <small>Research Topics:
 {% for topic in person.research_topics %}
-<a class="nodec" href="/publications.html#keyword_{{topic}}" class="nodec badge badge-light">{{ topic | capitalize }}</a>
+<a class="nodec" href="/publications.html#keyword_{{topic}}" class="nodec badge badge-light">{{ topic | capitalize_all }}</a>
 {% endfor %}</small>
 </div>
 </div>
