--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -27,7 +27,7 @@ $( nav_switch );$( window ).resize( nav_switch );
       <a href="/">
         <strong class="d-inline d-xl-none">{{ site.group_short }}</strong>
         <strong class="d-none d-xl-inline">{{ site.group_name }}</strong>
-        <span class="d-none d-md-inline">Group</span>
+        <!-- <span class="d-none d-md-inline">Group</span> -->
       </a>
     </div>
     <div class="ml-auto">
