--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -18,7 +18,7 @@ $( nav_switch );$( window ).resize( nav_switch );
   }
 </style>
 <div id="nav_spacer" class="mb-4 pb-5"></div>
-<nav id="navbar" class="header-nav pl-3 navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+<nav id="navbar" class="header-nav pl-3 navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <div class="navbar-brand">
     <strong class="d-inline">
     <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
