just testing graphviz integration

--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -1,4 +1,4 @@
-<script>
+<!--script>
 var nav_toggle = function(){ 
   $( "#navbar" ).toggleClass('fixed-top').toggleClass('static-top');
   $( "#nav_spacer" ).toggleClass('d-none');
@@ -11,14 +11,14 @@ var nav_switch = function() {
   ){ nav_toggle(); }
 };
 $( nav_switch );$( window ).resize( nav_switch );
-</script>
+</script-->
 <style>
   .header-nav .navbar-brand a, .header-nav .nav-link{
     color: white !important;
   }
 </style>
-<div id="nav_spacer" class="mb-4 pb-5"></div>
-<nav id="navbar" class="header-nav pl-3 navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<!--div id="nav_spacer" class="mb-4 pb-5"></div-->
+<nav id="navbar" class="header-nav pl-3 navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="navbar-brand">
     <strong class="d-inline">
     <a href="https://www.sdu.dk/en/Om_SDU/Institutter_centre/Imada_matematik_og_datalogi">IMADA</a>
