--- a/web/_includes/people_visiting.html
+++ b/web/_includes/people_visiting.html
@@ -2,7 +2,7 @@
 
 <hr>
 
-<h2 id="career">Visiting Members</h2>
+<h2>Visiting Members</h2>
 
 <div class="row">
 {% for person in site.data.people_visiting %}
