Hide the humour page for now

--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -17,7 +17,7 @@
         <a href="https://www.sdu.dk/en/om_sdu/om_dette_websted/databeskyttelse">Data protection at SDU</a> |
         <a href="https://www.sdu.dk/da/om_sdu/om_dette_websted/databeskyttelse">Databeskyttelse på SDU</a>
         <br>
-        <a href="/humour.html">Humour</a>     
+        <!-- <a href="/humour.html">Humour</a>      -->
       </small>
 
       </p>
