--- a/web/_includes/people_former.html
+++ b/web/_includes/people_former.html
@@ -65,8 +65,7 @@
 <div style="margin-top:-1em; margin-bottom:2em;" class="col-sm-12">
   <small>Research Topics:
 {% for topic in person.research_topics %}
-<a class="nodec" style="font-size:smaller; font-weight: 600;" class="nodec text-muted">{{ topic | capitalize_all }}</a>
-{% if forloop.last == false %},{% endif %}
+<a class="nodec" href="/publications.html#keyword_{{topic}}" class="nodec badge badge-light">{{ topic | capitalize_all }}</a>
 {% endfor %}</small>
 </div>
 </div>
