Add mime type to scripts

--- a/web/_includes/head.html
+++ b/web/_includes/head.html
@@ -20,13 +20,13 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="" />
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/jquery.dropotron.min.js"></script>
-    <script src="/js/jquery.scrolly.min.js"></script>
-    <script src="/js/jquery.scrollgress.min.js"></script>
-    <script src="/js/bootstrap-toggle.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/masonry.pkgd.min.js"></script>
+    <script type="application/javascript" src="/js/jquery.min.js"></script>
+    <script type="application/javascript" src="/js/jquery.dropotron.min.js"></script>
+    <script type="application/javascript" src="/js/jquery.scrolly.min.js"></script>
+    <script type="application/javascript" src="/js/jquery.scrollgress.min.js"></script>
+    <script type="application/javascript" src="/js/bootstrap-toggle.min.js"></script>
+    <script stype="application/javascript" rc="/js/bootstrap.bundle.min.js"></script>
+    <script type="application/javascript" src="/js/masonry.pkgd.min.js"></script>
     <!-- <script src="/js/hyphenator.js"></script> -->
     <script>
         var Hyphenopoly = {
@@ -34,7 +34,7 @@
             "paths" : { "patterndir" : "/js/patterns/", "maindir" : "/js/" }
         };
     </script>
-    <script src="/js/Hyphenopoly_Loader.js"></script>
+    <script type="application/javascript" src="/js/Hyphenopoly_Loader.js"></script>
     <noscript>
         <!-- <link rel="stylesheet" href="/css/skel.css" /> -->
         <link rel="stylesheet" href="/css/style.css" />
